@@ -2,6 +2,6 @@ AUX anope.confd 319 RMD160 0c5d646bfa55a17a32b9438c79abae6fce8a3edc SHA1 e19f469
 AUX anope.initd 575 RMD160 59f2759c0b3918f4d510c4f5f738dc40e079a511 SHA1 4669ee3d2eec9251b763438e0627f7152b5afc5a SHA256 bf510cb3eb2c9839630f834bc2730c6b4d3da9a7d9a671b02eefefad5f39ed1d
 AUX pid-patch.diff 450 RMD160 d18ab894895db105c91d0d1e24af2aff79f1bd13 SHA1 87be4165d15dbc6bfc972972d588e127ab492135 SHA256 cd3f266cd236e6a5bb7d15b502631e8992289455f7e308d94ac14e3b13314dc5
 DIST anope-1.8.0.tar.gz 1559446 RMD160 fc54c552de5bcfc1d3b620c442e4f5a7081734a3 SHA1 0e7106fd65c7dec4187fae26ac1ca6375fe694f1 SHA256 e0c03d2590d3da273e4fb2bb5ec8056f85045979f86e6224bfe895f16a1fd41d
-EBUILD anope-1.8.0.ebuild 4185 RMD160 1690dc67f9fbae6909642926f1224d7e87be2463 SHA1 acebb0a33a22eddd8940c318e38665ad1a29ee10 SHA256 06ee0673a80a69a13e1025f55159f40dcf5044944661dcac6dda00b596d0ab1d
-MISC ChangeLog 2338 RMD160 7ed1e3a6a43b93f71836c21f000ac5fcf73027dd SHA1 f00b4e75c493e0a1c8166e7fb1ac3a3e4affe603 SHA256 807745c4ca0fbc51e8a47d8958078d06e6f4201b46ff9b0152a09d09735529d6
-MISC metadata.xml 322 RMD160 4ac585786fcb58a92771bd8ee9f71f4738e64798 SHA1 133d8c37c5ab6d5366948f3de3e18c5a7a230ed4 SHA256 4240b9effe8d7796234c47e4f4af9ef4250bcfcafa9ec09e4b6a4a503de10b71
+EBUILD anope-1.8.0.ebuild 4284 RMD160 b0caeea9896e3f3bbdb891e9df00874f641cba0e SHA1 b7015b938d8e5ac5e84fe888a518adfad936ef08 SHA256 497d6d53172a3dbdf313a06d70800a77522402073850b0a651af050cba56db15
+MISC ChangeLog 2512 RMD160 6f84a8905a5305da72de177e6d363de1ac98fffa SHA1 b6f4dea8590aa0d243989af07aae654a85ca1929 SHA256 64fa7722550962462d3cd5f9374446cecbb4bb0cceeadb9a789542a181ed5363
+MISC metadata.xml 467 RMD160 4d1ba922dab10abae80273bc1113710cd5c03702 SHA1 789db76ef094d3a024a17274428e736e456ec598 SHA256 3264e2596d73f5b371b1442dfb31892b557ac5fb795d7712ddf2d335d94bbd3e
