@@ -3,6 +3,10 @@
 # $Header: /var/cvsroot/gentoo-x86/net-irc/anope/ChangeLog,v 1.15 2009/06/27 11:04:34 patrick Exp $
 
   16 Feb 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> anope-1.8.0.ebuild:
+  Add support for installing atheme's anope database conversion module.
+
+  16 Feb 2010; Nathan Phillip Brink (ohnobinki)
   <ohnobinki@ohnopublishing.net> -anope-1.8.0_rc1.ebuild:
   Drop anope-1.8.0_rc1
 
